// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test File ProductBox should show minimo value 1`] = `
<div
  className={undefined}
>
  ou 
  3
  x de
  <span
    className={undefined}
  >
    R$
  </span>
  <span
    className={undefined}
  >
    4
  </span>
  <strong>
    Sem Juros
  </strong>
</div>
`;

exports[`Test File ProductBox should show value parcel 1`] = `
<div
  className={undefined}
>
  ou 
  3
  x de
  <span
    className={undefined}
  >
    R$
  </span>
  <span
    className={undefined}
  >
    35,01
  </span>
  <strong>
    Sem Juros
  </strong>
</div>
`;

exports[`Test File ProductBox test with value below of minimunm 1`] = `
<div
  className={undefined}
>
  ou 
  2
  x de
  <span
    className={undefined}
  >
    R$
  </span>
  <span
    className={undefined}
  >
    5,00
  </span>
  <strong>
    Sem Juros
  </strong>
</div>
`;

exports[`Test File ProductBox test with value below of minimunm 2`] = `
<div
  className={undefined}
>
  ou 
  1
  x de
  <span
    className={undefined}
  >
    R$
  </span>
  <span
    className={undefined}
  >
    4,00
  </span>
  <strong>
    Sem Juros
  </strong>
</div>
`;
